css gap fix

--- a/guessthenumber.css
+++ b/guessthenumber.css
@@ -16,9 +16,12 @@ body {
 }
 .intro_wrapper {
     align-items: center;
-    display:flex;
-    flex-flow: column wrap;
+    /* display:flex; 
     gap: 20px;
+    flex-flow: column wrap; */
+    display: grid;
+    gap: 20px;
+    place-items: center;
 }
 .intro_wrapper button {
     background-color: hsl(214, 73%, 19%);
@@ -58,14 +61,18 @@ h1:hover, h2:hover, p:hover {
     cursor: default;
 }
 section {
-    align-content: center;
     border-radius: 8px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.279);
+    align-content: center;
     display: flex;
     flex-flow: column wrap;
     gap: 6px;
     padding: 25px;
     width: 300px;
+    /* display:grid; */
+    gap: 6px;
+    /* grid-auto-rows: min-content; */
+    /* place-items: center; */
 }
 
 section p {
@@ -98,7 +105,6 @@ button {
 #mode1_reset, #mode2_reset, #mode3_reset {
     /* justify-self: flex-end; */
     margin-top:auto;
-
 } 
 
 fieldset {
